2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* bestcomm/task_api/tasksetup_general.h,
	gen5200/include/mscan-base.h, gen5200/mscan/mscan-base.c,
	gen5200/irq/irq.c, startup/uboot_support.c: Removed warnings

2010-03-25      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* configure.ac, include/bsp.h, console/console.c, start/start.S:
	move more configuration constants to configure.ac

2010-03-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* clock/*, startup/bspstart.c, Makefile.am: switch this BSP to use
	decrementer as system clock source

2010-03-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1497/bsps
	* startup/bspreset.c: Do not enable interrupts while waiting for board
	to reset.

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-11-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ide/pcmcia_ide.c (mpc5200_pcmciaide_write_block,
	mpc5200_pcmciaide_read_block): Change "block_size" parameter to
	uint32_t to match with ide_ctrl_fns_t.

2009-11-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/linkcmds, startup/linkcmds.pm520: Remove.
	* startup/linkcmds.pm520_ze30, startup/linkcmds.pm520_cr825:
	New (Copy of former startup/linkcmds.pm520).
	* Makefile.am: Rework linkcmds handling.
	* configure.ac: Add RTEMS_BSP_LINKCMDS.
	* make/custom/brs5l.cfg, make/custom/icecube.cfg,
	make/custom/pm520_cr825.cfg, make/custom/pm520_ze30.cfg:
	Remove RTEMS_LINKCMDS.
	* make/custom/gen5200.inc: Remove LDFLAGS.

2009-11-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* start/start.S: call to boot_card checked, removed warning 

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for exception support changes.
	* irq/irq.c: Changed exception header file includes.
	* startup/bspstart.c: Changed exception header file includes.  Update
	for ppc_exc_initialize() changes.
